<resources>
    <string name="app_name">Holiday Finder</string>
    <string name="input_country">US</string>
    <string name="input_year">2023</string>
    <string name="title">Search holidays</string>
    <string name="next_7days">Next 7 days</string>
    <string name="holidays_in_country_year">Public holidays</string>
    <string name="longWeekend">Long weekend</string>
    <string name="search">Search</string>
    <string name="date">date</string>
    <string name="name">name</string>
    <string name="country">country</string>
    <string name="days">days</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="negative_message">Good Choice!</string>
    <string name="local_name">local name</string>
    <string name="holiday_name">name</string>
    <string name="holiday_date">date</string>
    <string name="error">Enter valid values on both fields</string>
    <string name="error_not_entered">Must Enter Country Code and Year</string>
    <string name="exit">exit</string>
    <string name="alert_title">Alert</string>
    <string name="alert_message">Click Ok to Exit, or Cancel to Continue</string>
    <string name="action_settings">Settings</string>
    <string name="search_on_google">Search Holiday on Google</string>
    <string name="back_to_finder">Back to finder</string>
    <string name="mark_on_calendar">Mark on Calendar</string>
</resources>