<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.FirstFragment"
    android:layout_margin="8dp"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:max="100"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar">

        <RadioButton
            android:id="@+id/nextHolidays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_7days"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/holidayCountryYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holidays_in_country_year"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/countryCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/input_country"
                android:textSize="20sp"
                android:inputType="text"
                android:autofillHints="US" />

            <EditText
                android:id="@+id/year"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/input_year"
                android:textSize="20sp"
                android:inputType="number"
                android:autofillHints="2023" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/longWeekend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longWeekend"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/longWeekendCountryCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/input_country"
                android:textSize="20sp"
                android:inputType="text"
                android:autofillHints="US" />

            <EditText
                android:id="@+id/longWeekendYear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/input_year"
                android:textSize="20sp"
                android:inputType="number"
                android:autofillHints="2023" />
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:visibility="invisible"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>