<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_friend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="false"
    app:cardCornerRadius="10sp"
    android:layout_marginBottom="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8D9FD"
        android:paddingBottom="20dp"
        android:textAlignment="center">

        <TextView
            android:id="@+id/date"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="20dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/date"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/country"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="20dp"
            android:textSize="20sp"
            android:text="@string/country" />
    </LinearLayout>
</androidx.cardview.widget.CardView>


