<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_friend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="false"
    app:cardCornerRadius="10sp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8D9FD"
        android:textAlignment="center"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/publicHolidaysDate"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="20dp"
            android:text="@string/holiday_date"
            android:textSize="20sp"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/publicHolidayLocalName"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@+id/date"
            android:paddingTop="20dp"
            android:textSize="20sp"
            android:text="@string/local_name" />

        <TextView
            android:id="@+id/publicHolidayName"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/name"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:text="@string/holiday_name" />
    </LinearLayout>
</androidx.cardview.widget.CardView>